# penguard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DOCUMENTACAO_IMPLEMENTACAO.md  LICENSE.md  README.md  WINDOWS_SERVER_EDR_SYSMON.md  configSSOKerberosKeycloak.md  docker-compose.prod.yml  docker-compose.yml  krb5.conf  pnpm-lock.yaml
apps/agent_private/: README.md  pyproject.toml
apps/agent_private/agent_private/: actions.py  cli.py  control.py  daemon.py  diagnostics.py  discovery.py  logs.py  runner.py  state.py  tui.py  windows_security.py  windows_service.py  windows_task.py
apps/agent_private/tests/: test_cli.py  test_control.py  test_daemon.py  test_diagnostics.py  test_discovery.py  test_runner.py  test_tui.py  test_windows_security.py  test_windows_service.py  test_windows_task.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  agent_discovery.py  main.py  realtime.py
apps/api/app/addons/: bootstrap.py  catalog_fetcher.py  contracts.py  dependencies.py  install_service.py  installed_store.py  loader.py  manifest.py  registry.py  registry_runtime.py
apps/api/app/ai/: __init__.py  cli_provider.py  cockpit_agent.py  preferences.py  provider.py
apps/api/app/auth/: __init__.py  audit.py  csrf.py  csrf_dependency.py  dependencies.py  errors.py  keycloak.py  permissions.py  rate_limit.py  service.py  (+2 more)
apps/api/migrations/: env.py
apps/api/scripts/: __init__.py  seed_soc_demo.py
apps/api/tests/: conftest.py  test_addon_catalog_fetcher.py  test_addon_install_service.py  test_addon_loader.py  test_addon_manifest_schema.py  test_addon_registry_runtime.py  test_addon_vendor_connectors.py  test_agent_discovery.py  test_ai_agent.py  test_ai_agent_settings.py  test_ai_cli_provider.py  test_ai_preferences.py  test_ai_provider_config.py  test_ai_tools.py  test_app_startup.py  test_audit_log.py  test_auth_contracts.py  test_auth_security.py  test_auth_service.py  test_config.py  test_config_secret_validation.py  test_connect_persistence.py  test_contract_fixtures.py  test_fortigate_client.py  test_fortigate_health_checks.py  test_fortigate_integrations.py  test_fortigate_policy_orchestrator.py  test_fortigate_policy_requests.py  test_fortigate_syslog_ingestion.py  test_fortigate_widgets.py  test_fortiweb_auth.py  test_fortiweb_block_workflow.py  test_fortiweb_client.py  test_fortiweb_integrations.py  test_health.py  test_installed_store.py  test_integration_catalog.py  test_integration_wiring.py  test_integration_wiring_store.py  test_integrations_connect.py  (+21 more)
apps/api/tools/: __init__.py
apps/xdr_rico/: Dockerfile  pyproject.toml
apps/xdr_rico/app/: main.py  store.py
apps/xdr_rico/tests/: test_core.py  test_health.py
(+426 files in other folders)
