[project]
name = "agent-private"
version = "0.1.0"
description = "Endpoint sensor for FortiDashboard xdr_rico"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "pydantic>=2.8.0",
    "tenacity>=9.0.0",
    "watchdog>=5.0.0",
]

[project.scripts]
agent-private = "agent_private.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
