[project]
name = "agent-private"
version = "0.1.0"
description = "Endpoint sensor for Penguard xdr_rico"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "pydantic>=2.8.0",
    "pywin32>=306; platform_system == 'Windows'",
    "tenacity>=9.0.0",
    "textual>=0.89.0,<9.0.0",
    "watchdog>=5.0.0",
]

[project.scripts]
agent-private = "agent_private.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
